# webassembly-barcode-reader

./: CMakeLists.txt  Dockerfile  README.md  index.html  zxing.js  zxing.wasm  zxing_reader.js  zxing_reader.wasm  zxing_writer.js  zxing_writer.wasm
assets/scripts/: script.js
assets/styles/: style.css
res/: index.html
